--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -111,6 +111,16 @@ This allows a Runbook operator to sign the transaction with the browser signer o
   </Property>
 
 
+  <Property name="chain_id" type="">
+    The chain id.
+  </Property>
+
+
+  <Property name="rpc_api_url" type="">
+    The URL of the EVM API used to broadcast the transaction.
+  </Property>
+
+
 </Properties>
 
 ### Outputs
