--- a/doc/addons/std/functions/operators/page.mdx
+++ b/doc/addons/std/functions/operators/page.mdx
@@ -199,12 +199,12 @@ output "my_int" {
 
 
   <Property name="lhs">
-    An `integer`, `float`, `string`, `boolean` or `null` value.
+    Any value.
   </Property>
 
 
   <Property name="rhs">
-    An `integer`, `float`, `string`, `boolean` or `null` value.
+    Any value.
   </Property>
 
 
