--- a/doc/addons/svm/overview/page.mdx
+++ b/doc/addons/svm/overview/page.mdx
@@ -1,10 +1,10 @@
 export const metadata = {
-    title: "Solana and SVM Compatible Blockchains (alpha)",
-    description: "Add-on for Solana and SVM Compatible Blockchains (alpha)",
+    title: "Solana and SVM Compatible Blockchains (beta)",
+    description: "Add-on for Solana and SVM Compatible Blockchains (beta)",
 };
 
-# Solana and SVM Compatible Blockchains (alpha) {{ id: "svm-constructs" }}
+# Solana and SVM Compatible Blockchains (beta) {{ id: "svm-constructs" }}
 
 The SVM `txtx` plugin enables building Runbooks that interact with Solana and SVM compatible blockchains. 
-The plugin provides utility functions that allow you to deploy anchor programs, and encode instruction calls according to program IDLs.
+The plugin provides utility functions that allow you to deploy anchor programs and encode instruction calls according to program IDLs.
 The actions can be used to create valid transfer, program call, and program deployment transactions that can be signed via a mnemonic phrase, secret key, or via your browser signer.
